--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/http": "5.0.1",
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
+    "@ionic-native/barcode-scanner": "^4.4.2",
+    "@ionic-native/camera": "^4.4.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -27,7 +29,9 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "6.3.0",
+    "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-googleplus": "^5.1.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
@@ -35,6 +39,7 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "phonegap-plugin-barcodescanner": "^7.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -50,7 +55,12 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "211293333108-fk126c6hlmrccjfrk6bj2gmhta2s67pt.apps.googleusercontent.com"
+      }
     },
     "platforms": [
       "android"
